--- a/VE_Conductor/DefaultPlugin/SConscript
+++ b/VE_Conductor/DefaultPlugin/SConscript
@@ -4,7 +4,7 @@ import os, sys, string, smtplib
 
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR')
+Import('baseEnv libPath ves_pkg LIBDIR buildDir')
 
 sources = Split("""
     DefaultPlugin.cxx
@@ -20,6 +20,13 @@ lib_env = ves_pkg.getEnv().Copy()
 lib_env.Append(LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
                    'VE_CADLib', 'VE_ShaderLib', 'GUIPluginLib',
                    'VE_OpenModuleLib'])
+lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Conductor','Network'),
+                        pj('#', buildDir, 'VE_Conductor','GUIPlugin'),
+                        pj('#', buildDir, 'VE_Open','skel'),
+                        pj('#', buildDir, 'VE_Open','XML'),
+                        pj('#', buildDir, 'VE_Open','XML','Model'),
+                        pj('#', buildDir, 'VE_Open','XML','CAD'),
+                        pj('#', buildDir, 'VE_Open','XML','Shader')])
 
 lib_env.ParseConfig( 'wx-config --cxxflags --libs' )
 lib_env.ParseConfig('flagpoll TAO xerces --cflags --libs')
