--- a/VE_Builder/Translator/cfdTranslatorToVTK/SConscript
+++ b/VE_Builder/Translator/cfdTranslatorToVTK/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR')
+Import('baseEnv libPath ves_pkg LIBDIR vtk_options buildDir')
 
 sources = Split("""
    cfdTranslatorToVTK.cxx 
@@ -14,8 +14,10 @@ headers = Split("""
 ##srcs = map(lambda s: pj('#', 'VE_CE', 'Utilities', s), srcs)
 
 lib_env = ves_pkg.getEnv().Copy()
-lib_env.Append(LIBS = ['VE_UtilLib'])
-lib_env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
+lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','Utilities')],
+               LIBS = ['VE_UtilLib'])
+lib_env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+vtk_options.apply( lib_env )
 
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('TranslatorToVTKLib',
