--- a/VE_Builder/Utilities/SConscript
+++ b/VE_Builder/Utilities/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR GetPlatform')
+Import('baseEnv libPath ves_pkg LIBDIR GetPlatform buildDir vtk_options')
 
 addNormals2Poly = Split("""
    addNormals2Poly.cpp
@@ -77,11 +77,10 @@ whatIsScalarRange = Split("""
 """)
 
 env = ves_pkg.getEnv().Copy()
-##env.Append(CPPPATH = [os.getcwd()])
-env.Append(LIBS = ['VE_UtilLib'])
-##env.Append(CPPPATH = [pj('#', 'VE_Builder', 'Translator')])
-##env.Append(CPPPATH = ['#'])
-env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
+env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','Utilities')],
+            LIBS = ['VE_UtilLib'])
+vtk_options.apply( env )
+env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
 
 norm2poly = ves_pkg.createProgram('addNormals2Poly', env, 'bin')
 norm2poly.addSources( addNormals2Poly )
