--- a/VE_Open/XML/SConscript
+++ b/VE_Open/XML/SConscript
@@ -53,14 +53,15 @@ headers = Split("""
 ##srcs = map(lambda s: pj('#', 'VE_Open', 'XML', s), srcs)
 
 lib_env = ves_pkg.getEnv().Copy()
-lib_env.ParseConfig('flagpoll xerces apr-1 apr-util-1 --libs --cflags')
+##lib_env.ParseConfig('flagpoll xerces apr-1 apr-util-1 --libs --cflags' )
 ##Get apr config.
-##if cfdHostType == "Darwin":
-##    suffix = "-1-config"
-##else:
-##    suffix = "-config"
-#env.ParseConfig('apr%s --includes --cppflags --link-ld --libs' %suffix)
-#env.ParseConfig('apu%s --includes --link-ld --libs' %suffix)
+if baseEnv.has_key('AprVersion'):
+   if baseEnv[ 'AprVersion' ] >= "1.0":
+      lib_env.ParseConfig('flagpoll xerces apr-1 apr-util-1 --libs --cflags' )
+   else:
+      lib_env.ParseConfig('flagpoll xerces apr apr-util --libs --cflags' )
+else:
+   lib_env.ParseConfig('flagpoll xerces apr apr-util --libs --cflags' )
 
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_XMLLib',
