--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag osg_options vtk_options')
 
 sources = Split("""
     cfdClone.cxx
@@ -50,8 +50,9 @@ headers = Split("""
 
 lib_env = ves_pkg.getEnv().Copy()
 ##env.Append(CPPPATH = [os.getcwd()])
-lib_env.ParseConfig('flagpoll osg gmtl vtk vrjuggler --libs --cflags')
-
+lib_env.ParseConfig('flagpoll gmtl vrjuggler --libs --cflags')
+vtk_options.apply( lib_env )
+osg_options.apply( lib_env )
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_SceneGraphLib%s' %(execOsgPatTag),
                                                         lib_env,
