--- a/VE_Xplorer/Utilities/SConscript
+++ b/VE_Xplorer/Utilities/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag vtk_options')
 
 sources = Split("""
    cfdAccessoryFunctions.cxx
@@ -29,8 +29,8 @@ headers = Split("""
 ##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'Utilities', s), util_srcs)
 
 lib_env = ves_pkg.getEnv().Copy()
-lib_env.ParseConfig('flagpoll Boost.Filesystem vtk --cflags --libs')
-
+lib_env.ParseConfig('flagpoll Boost.Filesystem --cflags --libs')
+vtk_options.apply( lib_env )
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_UtilLib',
                                                         lib_env,
