--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag buildDir osg_options vtk_options')
 
 sources = Split("""
    cfd1DTextInput.cxx 
@@ -197,9 +197,17 @@ lib_env.Append(LIBS = ['VE_XMLLib', 'VE_CADLib', 'VE_ModelLib',
                    'VE_SceneGraphLib%s' %(execOsgPatTag),
                    'VE_UtilLib',
                    'VE_TextureBasedLib%s' %(execOsgPatTag)])
+lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
+                        pj('#', buildDir, 'VE_Xplorer','SceneGraph','Utilities'),
+                        pj('#', buildDir, 'VE_Xplorer','Utilities'),
+                        pj('#', buildDir, 'VE_Xplorer','TextureBased'),
+                        pj('#', buildDir, 'VE_Open','XML'),
+                        pj('#', buildDir, 'VE_Open','XML','Model'),
+                        pj('#', buildDir, 'VE_Open','XML','CAD')])
 lib_env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
-lib_env.ParseConfig('flagpoll vtk xerces osg vrjuggler --libs --cflags')
-
+lib_env.ParseConfig('flagpoll xerces vrjuggler --libs --cflags')
+vtk_options.apply( lib_env )
+osg_options.apply( lib_env )
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_XplorerLib%s' %(execOsgPatTag),
                                                         lib_env,
