added animate functionality to trackball and renamed class from cfdTrackball to Trackball because cfd does not make sense

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -115,7 +115,7 @@ SRCS=\
    MaterialModeUpdateEH.cxx \
    MaterialUpdateEH.cxx\
    KeyboardMouse.cxx\
-   cfdTrackball.cxx\
+   Trackball.cxx\
    cfdObjectHandler.cxx\
    SelectionHandler.cxx\
    MouseSelection.cxx\
