--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -66,7 +66,7 @@ sources = Split("""
    MaterialModeUpdateEH.cxx
    MaterialUpdateEH.cxx
    KeyboardMouse.cxx
-   cfdTrackball.cxx
+   Trackball.cxx
    cfdObjectHandler.cxx
    SelectionHandler.cxx
    MouseSelection.cxx
