--- a/VE_Conductor/Framework/SConscript
+++ b/VE_Conductor/Framework/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR GetPlatform buildDir')
+Import('baseEnv libPath ves_pkg LIBDIR GetPlatform buildDir xerces_options')
 
 srcs = Split("""
    App.cpp 
@@ -46,10 +46,10 @@ env.Append(LIBPATH = [pj('#', buildDir, 'VE_Conductor','Network'),
                         pj('#', buildDir, 'VE_Open','XML','Shader')])
 
 env.ParseConfig( 'wx-config --cxxflags --libs' )
-env.ParseConfig('flagpoll TAO xerces ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
+env.ParseConfig('flagpoll TAO ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                               TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                               TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode --cflags --libs')
-
+xerces_options.apply( env )
 prog = ves_pkg.createProgram('WinClient', env, 'bin')
 prog.addSources( srcs )
 prog.build()
