--- a/VE_Conductor/Network/SConscript
+++ b/VE_Conductor/Network/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR buildDir')
+Import('baseEnv libPath ves_pkg LIBDIR buildDir xerces_options')
 
 sources = Split("""
    interface.cpp 
@@ -23,7 +23,7 @@ headers = Split("""
 lib_env = ves_pkg.getEnv().Copy()
 lib_env.Append(LIBS = 'VE_XMLLib')
 lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Open','XML')])
-lib_env.ParseConfig('flagpoll xerces --libs --cflags')
+xerces_options.apply( lib_env )
 
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_ConductorLib',
