--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag buildDir osg_options vtk_options')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag buildDir osg_options vtk_options xerces_options')
 
 sources = Split("""
    cfd1DTextInput.cxx 
@@ -159,7 +159,7 @@ headers = Split("""
    MaterialModeUpdateEH.h
    MaterialUpdateEH.h
    KeyboardMouse.h
-   cfdTrackball.h
+   Trackball.h
    cfdObjectHandler.h
    SelectionHandler.h
    MouseSelection.h
@@ -205,9 +205,10 @@ lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
                         pj('#', buildDir, 'VE_Open','XML','Model'),
                         pj('#', buildDir, 'VE_Open','XML','CAD')])
 lib_env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
-lib_env.ParseConfig('flagpoll xerces vrjuggler --libs --cflags')
+lib_env.ParseConfig('flagpoll vrjuggler --libs --cflags')
 vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
+xerces_options.apply( lib_env )
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_XplorerLib%s' %(execOsgPatTag),
                                                         lib_env,
