--- a/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR GetPlatform vtk_options buildDir')
+Import('baseEnv libPath ves_pkg LIBDIR GetPlatform vtk_options buildDir wxwidgets_options')
 
 srcs = Split("""
    flowTexture.cpp 
@@ -16,7 +16,7 @@ env = ves_pkg.getEnv().Copy()
 env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','Utilities')],
             LIBS = ['VE_UtilLib'])
 env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
-env.ParseConfig('wx-config --cxxflags --libs')
+wxwidgets_options.apply( env )
 vtk_options.apply( env )
 prog = ves_pkg.createProgram('vtkTo3DTexture', env, 'bin')
 prog.addSources( srcs )
