--- a/VE_Conductor/Utilities/SConscript
+++ b/VE_Conductor/Utilities/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR buildDir xerces_options')
+Import('baseEnv libPath ves_pkg LIBDIR buildDir xerces_options wxwidgets_options')
 
 utils_srcs = Split("""
    Link.cxx
@@ -64,9 +64,9 @@ lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Conductor','Network'),
                         pj('#', buildDir, 'VE_Open','XML','Model'),
                         pj('#', buildDir, 'VE_Open','XML','CAD'),
                         pj('#', buildDir, 'VE_Open','XML','Shader')])
-lib_env.ParseConfig('wx-config --cxxflags --libs')
 lib_env.ParseConfig('flagpoll TAO --cflags --libs')
 xerces_options.apply( lib_env )
+wxwidgets_options.apply( lib_env )
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_Conductor_UtilitiesLib',
                                                         lib_env,
