more scons updates. i removed some clutter from the build env.

--- a/VE_Open/skel/SConscript
+++ b/VE_Open/skel/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR')
+Import('baseEnv ves_pkg LIBDIR')
 
 headers = Split("""
    moduleS.h
