--- a/VE_Builder/Translator/DataLoader/SConscript
+++ b/VE_Builder/Translator/DataLoader/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR vtk_options buildDir')
+Import('baseEnv ves_pkg LIBDIR vtk_options buildDir')
 
 sources = Split("""
     DataLoader.cxx
