--- a/VE_Builder/Translator/DataLoader/TestLoader/SConscript
+++ b/VE_Builder/Translator/DataLoader/TestLoader/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR GetPlatform buildDir vtk_options')
+Import('baseEnv ves_pkg LIBDIR GetPlatform buildDir vtk_options')
 
 srcs = Split("""
    main.cxx
