--- a/VE_Builder/Utilities/SConscript
+++ b/VE_Builder/Utilities/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR GetPlatform buildDir vtk_options')
+Import('baseEnv ves_pkg LIBDIR GetPlatform buildDir vtk_options')
 
 addNormals2Poly = Split("""
    addNormals2Poly.cpp
