--- a/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR GetPlatform vtk_options buildDir wxwidgets_options')
+Import('baseEnv ves_pkg LIBDIR GetPlatform vtk_options buildDir wxwidgets_options')
 
 srcs = Split("""
    flowTexture.cpp 
