--- a/VE_CE/Utilities/SConscript
+++ b/VE_CE/Utilities/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR buildDir xerces_options')
+Import('baseEnv ves_pkg LIBDIR buildDir xerces_options')
 
 headers = Split("""
    Connection.h
