--- a/VE_Conductor/DefaultPlugin/SConscript
+++ b/VE_Conductor/DefaultPlugin/SConscript
@@ -4,7 +4,7 @@ import os, sys, string, smtplib
 
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR buildDir xerces_options wxwidgets_options')
+Import('baseEnv ves_pkg LIBDIR buildDir xerces_options wxwidgets_options')
 
 sources = Split("""
     DefaultPlugin.cxx
