--- a/VE_Conductor/Framework/SConscript
+++ b/VE_Conductor/Framework/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR GetPlatform buildDir xerces_options wxwidgets_options')
+Import('baseEnv ves_pkg LIBDIR GetPlatform buildDir xerces_options wxwidgets_options')
 
 srcs = Split("""
    App.cpp 
