--- a/VE_Conductor/Utilities/SConscript
+++ b/VE_Conductor/Utilities/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR buildDir xerces_options wxwidgets_options')
+Import('baseEnv ves_pkg LIBDIR buildDir xerces_options wxwidgets_options')
 
 utils_srcs = Split("""
    Link.cxx
