--- a/VE_Open/XML/SConscript
+++ b/VE_Open/XML/SConscript
@@ -3,7 +3,7 @@ import os, sys, string
 ##import practice
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR xerces_options')
+Import('baseEnv ves_pkg LIBDIR xerces_options')
 
 sources = Split("""
    CreationEventHandler.cxx 
