--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag osg_options vtk_options')
+Import('baseEnv ves_pkg LIBDIR execOsgPatTag osg_options vtk_options')
 
 sources = Split("""
     cfdClone.cxx
